--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">AudioRecorder</string>
+    <string name="default_web_client_id">361294504545-a7p7udl4eufs29ls968p71kneu0b2kk2.apps.googleusercontent.com</string>
 </resources>
